<resources>
    <string name="app_name">ContextLock</string>
    <string name="pinlock_title">Use PIN!</string>
    <string name="pinlock_settitle">Set Pin Code</string>
    <string name="pinlock_notitle"></string>
    <string name="pinlock_firsttry">Wrong Pin Code: First Try</string>
    <string name="pinlock_secondtry">Wrong Pin Code: Second Try</string>
    <string name="pinlock_wrongpin">Wrong Pin code</string>
    <string name="pinlock_secondPin">Enter Pin Code Again</string>
    <string name="pinlock_tryagain">Pin Codes Are Not The Same</string>
    <string name="pinlock_fingerprint">Use Fingerprint</string>
    <string name="fingererror_title">A problem with your fingerprint was detected</string>
    <string name="set_pin">Change PIN/Pattern</string>
    <string name="set_id">Enter your received ID</string>
    <string name="settings">Settings</string>
    <string name="title_activity_experience_sampling">ExperienceSamplingActivity</string>
    <string name="feedback_survey">Feedback on ContextLockScreen</string>

    <string name="patternlock_title">Use Pattern!</string>
    <string name="patternlock_settitle">Set Pattern</string>
    <string name="patternlock_wrongpin">Wrong Pattern</string>
    <string name="patternlock_secondPin">Enter Pattern Again</string>
    <string name="patternlock_tryagain">Pattern Are Not The Same</string>

    <string name="prediction_precision">The given reason is true</string>
    <string name="strongly_agree">strongly agree</string>
    <string name="agree">agree</string>
    <string name="neutral">neutral</string>
    <string name="disagree">disagree</string>
    <string name="strongly_disagree">strongly disagree</string>

    <string name="fingerprint_error_text">I had problems with my fingerprint authentication</string>
    <string name="true_text">true</string>
    <string name="false_text">false</string>
    <string name="do_not_remember">I don\'t remember</string>

    <string name="lockswitch_text">I switched to my PIN/pattern</string>
    <string name="give_feedback">Feedback geben</string>
    <string name="annoyance">I was annoyed in this situation</string>
    <string name="activity_unknown">activity unknown</string>
    <string name="activity_in_vehicle">in vehicle</string>
    <string name="activity_on_bicycle">on biycle</string>
    <string name="activity_on_foot">on foot</string>
    <string name="activity_running">running</string>
    <string name="activity_still">still</string>
    <string name="activity_tilting">tilting</string>
    <string name="activity_walking">walking</string>
    <string name="user_location_string">I am ...</string>
    <string name="reasonable_switch">I think the switch to PIN/pattern was/ would have been appropriate</string>
    <string name="public_transportation">in public transportation (z.B. bus, train, metro,...)</string>
    <string name="at_work">at work</string>
    <string name="at_uni">in university</string>
    <string name="at_home">at home</string>
    <string name="workout">doing sports</string>
    <string name="outdoor">outdoor</string>
    <string name="something_else">other</string>
    <string name="some_examples">e.g. in a bar, ...</string>
    <string name="send">send</string>
    <string name="not_now">not now</string>
    <string name="background_image_description">background image</string>
    <string name="channel_name">context_channel</string>
    <string name="channel_description">It\'s raining! Use PIN</string>

    <!--Notification Text -->
    <string name="rain">It\'s raining!</string>
    <string name="snow">It\'s snowing!</string>
    <string name="wet">It\'s wet!</string>
    <string name="muggy">It\'s muggy!</string>
    <string name="humdidity">It\'s muggy!</string>
    <string name="running">Sport detected!</string>
    <string name="in_vehicle">Driving detected!</string>
    <string name="notification_title">Use PIN/pattern!</string>
    <string name="notification_description">Your fingerprint might not working.</string>
    <string name="stop_tracking">stop tracking</string>
    <string name="start_tracking">start tracking</string>
    <string name="enter_id">submit ID</string>
    <string name="reason_hint_input">If notification is wrong, which reason instead?</string>
    <string name="next_string">Next</string>
    <string name="fingererror_reason">The fingerprint might not work, because of...</string>
    <string name="rain_reason">rain</string>
    <string name="snow_reason">snow</string>
    <string name="humidity_reason">humidity</string>
    <string name="dirty_finger_reason">dirty fingers</string>
    <string name="heat_reason">heat</string>
    <string name="cooking_reason">cooking</string>
    <string name="wet_reason">wet fingers</string>

    <string name="permission">With the usage of the application, I agree that the following user data are collected
    </string>

    <string name="permission_gps">&#8226; GPS location</string>
    <string name="permission_weather"> &#8226; weather data</string>
    <string name="permission_activity"> &#8226; activities (walking, running, driving)</string>
    <string name="permission_demographics"> &#8226; demographics</string>
    <string name="permission_lockscreen_data"> &#8226; lock screen data </string>


    <string name="agreement">By agreeing the terms, I accept the terms and privacy policy stated in the \'Getting Started\' document.</string>

    <string name="agree_permission">I agree to terms</string>
    <string name="agree_permission_request">Please agree the terms to use the App.</string>
    <string name="dont_know">I don\'t know</string>

    <!--default notifcation messages-->
    <string name="default_humidity">Humidity detected.</string>
    <string name="default_movement">Movement detected.</string>
    <string name="default_message">Your fingerprint might not work</string>

    <string name="no_condition_message">no condition met</string>
    <string name="previous">back</string>

    <string name="profession_student">Student</string>
    <string name="profession_postgraduate">Ph.D.student</string>
    <string name="profession_employee">Employee</string>
    <string name="profession_self_employed">Self-Employed</string>
    <string name="profession_other">Other</string>
    <string name="female">female</string>
    <string name="male">male</string>

    <string name="admin_explanation">Unlock events are logged for study analytics</string>
    <string name="lockout_scenario">How often do you experience lockout* scenarios? </string>
    <string name="lockout_explanation">*Lockout means you failed to unlock your phone too often, therefor you need to wait to try again</string>
    <string name="fingererror_scenario">How often do you have problems with your fingerprint authentication?* </string>
    <string name="fingererror_explanation">*This means your fingerprint could not be recognized immediately</string>
    <string name="content_description_icon">icon</string>

</resources>
