<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/background_image_description"
        android:scaleType="fitXY"
        android:src="@drawable/bg" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/color_gradient"
        android:orientation="vertical"></LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="200dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/set_id_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal"
            android:hint="@string/set_id"
            android:inputType="number"
            android:padding="20dp"
            android:textCursorDrawable="@null"
            android:textSize="@dimen/edit_text_size" />

        <Button
            android:id="@+id/set_user_id_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:background="@drawable/button_color_gradient"
            android:padding="2dp"
            android:text="@string/enter_id"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="135dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="2dp">

        <Button
            android:id="@+id/start_tracking_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="@dimen/button_weight"
            android:background="@drawable/button_color_gradient"
            android:text="@string/start_tracking"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />

        <Button
            android:id="@+id/stop_tracking_button"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:layout_weight="@dimen/button_weight"
            android:background="@drawable/button_color_gradient"
            android:padding="5dp"
            android:text="@string/stop_tracking"
            android:textColor="@color/white"
            android:textSize="@dimen/button_text_size" />
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingBottom="5dp"
        android:text="Contact alice.nguyen@campus.lmu.de to report problems"
        android:textAlignment="center"
        android:textColor="@color/contact_color"
        android:textSize="12sp" />
</RelativeLayout>