<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".experience_sampling.ExperienceSamplingActivity2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg"
        android:padding="15dp">


       <!-- <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">-->

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/round_border"
                android:orientation="vertical"
                android:padding="15dp"
                android:focusable="true"
                android:focusableInTouchMode="true">

                <!--<TextView
                    android:id="@+id/reasonableSwitch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/onside_border"
                    android:padding="@dimen/header_padding"
                    android:text="@string/reasonable_switch"
                    android:textColor="@color/dark_grey"
                    android:textSize="@dimen/header_text_size" />


                <SeekBar
                    android:id="@+id/seekBarReasonable"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:max="4"
                    android:maxHeight="3dp"
                    android:minHeight="3dp"
                    android:progress="0"
                    android:progressDrawable="@drawable/seekbar_style"
                    android:thumbTint="@color/transparent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginBottom="@dimen/rating_container_margin_bottom"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/reasonable_strongly_disagree"
                        android:layout_width="@dimen/radio_button_text_width"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="@dimen/radio_button_text_weight"
                        android:text="@string/strongly_disagree"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/rating_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reasonable_disagree"
                        android:layout_width="@dimen/radio_button_text_width"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="@dimen/radio_button_text_weight"
                        android:text="@string/disagree"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/rating_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reasonable_neutral"
                        android:layout_width="@dimen/radio_button_text_width"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="@dimen/radio_button_text_weight"
                        android:text="@string/neutral"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/rating_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reasonable_agree"
                        android:layout_width="@dimen/radio_button_text_width"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="@dimen/radio_button_text_weight"
                        android:text="@string/agree"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/rating_label"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/reasonable_strongly_agree"
                        android:layout_width="@dimen/radio_button_text_width"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="12dp"
                        android:layout_weight="@dimen/radio_button_text_weight"
                        android:text="@string/strongly_agree"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/rating_label"
                        android:textStyle="bold" />
                </LinearLayout>-->


                <TextView
                    android:id="@+id/user_location"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/onside_border"
                    android:padding="@dimen/header_padding"
                    android:text="@string/user_location_string"
                    android:textColor="@color/dark_grey"
                    android:textStyle="bold"
                    android:textSize="@dimen/header_text_size" />

                <RadioGroup
                    android:id="@+id/radio_location_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp"
                    android:paddingBottom="0dp">

                    <RadioButton
                        android:id="@+id/in_vehicle_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onLocationRadioButtonClicked"
                        android:text="@string/public_transportation"
                        android:textColor="@color/dark_grey"
                        android:layout_marginTop="@dimen/radio_button_margin"
                        android:textSize="@dimen/radio_button_textsize" />

                    <RadioButton
                        android:id="@+id/at_work_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onLocationRadioButtonClicked"
                        android:text="@string/at_work"
                        android:textColor="@color/dark_grey"
                        android:layout_marginTop="@dimen/radio_button_margin"
                        android:textSize="@dimen/radio_button_textsize" />

                    <RadioButton
                        android:id="@+id/at_university_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onLocationRadioButtonClicked"
                        android:text="@string/at_uni"
                        android:layout_marginTop="@dimen/radio_button_margin"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/radio_button_textsize" />

                    <RadioButton
                        android:id="@+id/at_home_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onLocationRadioButtonClicked"
                        android:text="@string/at_home"
                        android:layout_marginTop="@dimen/radio_button_margin"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/radio_button_textsize" />

                    <RadioButton
                        android:id="@+id/workout_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:onClick="onLocationRadioButtonClicked"
                        android:text="@string/workout"
                        android:layout_marginTop="@dimen/radio_button_margin"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/radio_button_textsize" />

                    <RadioButton
                        android:id="@+id/outdoor_radio_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/outdoor"
                        android:layout_marginTop="@dimen/radio_button_margin"
                        android:textColor="@color/dark_grey"
                        android:onClick="onLocationRadioButtonClicked"
                        android:textSize="@dimen/radio_button_textsize" />



                        <RadioButton
                            android:id="@+id/something_else__radio_button"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            android:layout_marginBottom="10dp"
                            android:onClick="onLocationRadioButtonClicked"
                            android:text="@string/something_else"
                            android:layout_marginTop="@dimen/radio_button_margin"
                            android:textColor="@color/dark_grey"
                            android:textSize="@dimen/radio_button_textsize" />
                </RadioGroup>
                <EditText
                    android:id="@+id/location_freetext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/dark_grey"
                    android:hint="@string/some_examples"
                    android:textColor="@color/dark_grey"
                    android:layout_marginBottom="@dimen/radio_button_margin"
                    android:textSize="@dimen/radio_button_textsize" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:gravity="right"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/send_button"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:src="@mipmap/ic_send" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="right"
                        android:text="@string/send"
                        android:textAlignment="center"
                        android:textColor="@color/dark_grey"
                        android:textSize="@dimen/send_text_size" />

                </LinearLayout>

            </LinearLayout>
        <!--</ScrollView>-->

    </RelativeLayout>

</RelativeLayout>